# Generic-KdTree

./: .gitignore  CMakeLists.txt  KDTree.sln  KDTree.vcxproj  Readme.md
include/KdTree/: KdTree.hpp
source/: KdTree.cpp
tests/: TestKdTree.cpp  TestMain.cpp  catch.hpp
